# airflow/models/taskinstance.py
@@ -452,7 +452,7 @@ class TaskInstance(Base, LoggingMixin):
     queued_by_job_id = Column(Integer)
     pid = Column(Integer)
     executor_config = Column(ExecutorConfigType(pickler=dill))
-    user_note = Column(String(1000))
+    user_notes = Column(String(1000))
 
     external_executor_id = Column(StringID())
 
